--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@mui/styles": "^5.1.1",
     "filesize": "^8.0.6",
     "mime": "^3.0.0",
+    "qrcode": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
