--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,8 @@
     "copy:dist": "ncp ./dist/folder.html ../assets/folder.html",
     "build:site": "webpack --mode production",
     "watch:site": "webpack --mode development --watch",
-    "release:site": "npm run clean:dist && npm run build:site && npm run copy:dist"
+    "release:site": "npm run clean:dist && npm run build:site && npm run copy:dist",
+    "tsc": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "@mui/styles": "^5.1.1",
     "filesize": "^8.0.6",
     "mime": "^3.0.0",
     "qrcode": "^1.5.0",
