--- a/ui/package.json
+++ b/ui/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:dist": "del-cli ./dist",
-    "copy:dist": "ncp ./dist/folder.html ../assets/folder.html",
+    "clean:dist": "del-cli ./dist/**",
+    "clean:www": "del-cli --force ../assets/www",
+    "copy:dist": "ncp ./dist ../assets/www",
     "build:site": "webpack --mode production",
     "watch:site": "webpack --mode development --watch",
-    "release:site": "npm run clean:dist && npm run build:site && npm run copy:dist",
+    "release:site": "npm run clean:dist && npm run build:site && npm run clean:www && npm run copy:dist",
     "tsc": "tsc --noEmit"
   },
   "author": "",
@@ -26,12 +27,17 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.1",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^6.7.1",
     "del-cli": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.0.0",
     "ncp": "^2.0.0",
     "react-dev-utils": "^12.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
