--- a/ui/package.json
+++ b/ui/package.json
@@ -19,18 +19,20 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "filesize": "^8.0.6",
+    "filesize": "^9.0.11",
     "mime": "^3.0.0",
+    "path-browserify": "^1.0.1",
     "qrcode": "^1.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/path-browserify": "^1.0.0",
     "@types/react-dom": "^18.0.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.7.1",
-    "del-cli": "^4.0.0",
+    "del-cli": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "ncp": "^2.0.0",
