--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,9 @@
     "build:site": "webpack --mode production",
     "watch:site": "webpack --mode development --watch",
     "release:site": "npm run clean:dist && npm run build:site && npm run clean:www && npm run copy:dist",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "lint": "npx eslint ./src",
+    "lint:fix": "npx eslint --fix ./src"
   },
   "author": "",
   "license": "ISC",
@@ -29,10 +31,19 @@
   "devDependencies": {
     "@types/path-browserify": "^1.0.0",
     "@types/react-dom": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.7.1",
     "del-cli": "^5.0.0",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "ncp": "^2.0.0",
