--- a/ui/package.json
+++ b/ui/package.json
@@ -17,11 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "filesize": "^9.0.11",
+    "filesize": "^10.0.5",
     "mime": "^3.0.0",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.0",
