--- a/ui/package.json
+++ b/ui/package.json
@@ -7,9 +7,9 @@
     "clean:dist": "del-cli ./dist/**",
     "clean:www": "del-cli --force ../assets/www",
     "copy:dist": "ncp ./dist ../assets/www",
-    "build:site": "webpack --mode production",
-    "watch:site": "webpack --mode development --watch",
-    "release:site": "npm run clean:dist && npm run build:site && npm run clean:www && npm run copy:dist",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development --watch",
+    "release": "npm run clean:dist && npm run build && npm run clean:www && npm run copy:dist",
     "tsc": "tsc --noEmit",
     "lint": "npx eslint ./src",
     "lint:fix": "npx eslint --fix ./src"
