--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -58,7 +58,15 @@
         "@typescript-eslint/no-non-null-assertion": [0],
         "@typescript-eslint/no-unused-vars": [0],
         "react/jsx-no-duplicate-props": [2, { "ignoreCase": false }],
-        "react/jsx-props-no-spreading": [0]
+        "react/jsx-props-no-spreading": [0],
+        "no-useless-escape": [0],
+        "no-plusplus": [0],
+        "no-await-in-loop": [0],
+        "@typescript-eslint/no-var-requires": [0],
+        "no-return-assign": [0],
+        "no-constant-condition": [0],
+        "no-promise-executor-return": [0],
+        "no-cond-assign": [0]
     },
     "settings": {
         "import/resolver": {
