--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "filesize": "^10.0.5",
+    "hls.js": "^1.3.1",
     "mime": "^3.0.0",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.0",
