--- a/ui/package.json
+++ b/ui/package.json
@@ -24,8 +24,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "@oplayer/core": "^1.2.31",
-    "@oplayer/ui": "^1.2.34",
+    "@oplayer/core": "1.2.31",
+    "@oplayer/ui": "1.2.34",
     "filesize": "^10.0.5",
     "hls.js": "^1.5.2",
     "mime": "^4.0.1",
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@types/path-browserify": "^1.0.0",
     "@types/react-dom": "^18.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.2",
-    "css-loader": "^6.7.1",
+    "css-loader": "^7.1.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -53,14 +53,14 @@
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^12.1.0",
     "ncp": "^2.0.0",
+    "prettier": "^3.0.2",
     "react-dev-utils": "^12.0.0",
-    "style-loader": "^3.3.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.7.0",
     "typescript": "^5.0.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
-    "webpack-cli": "^5.0.1",
-    "prettier": "^3.0.2"
+    "webpack-cli": "^5.0.1"
   }
 }
