--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -66,7 +66,9 @@
         "no-return-assign": [0],
         "no-constant-condition": [0],
         "no-promise-executor-return": [0],
-        "no-cond-assign": [0]
+        "no-cond-assign": [0],
+        "react/no-unstable-nested-components": [0],
+        "no-restricted-exports": [0]
     },
     "settings": {
         "import/resolver": {
